Fixed image re-size issue on mobile

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -613,6 +613,11 @@ aside li.current a:before {
   padding: 0;
 }
 
+.docs img {
+  max-width: 100%;
+  width: 100%;
+}
+
 .section-nav {
   text-align: center;
   padding-top: 40px;
